04-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitlab-redis
  namespace: gitlab
spec:
  serviceName: "redis"
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:5.0
        ports:
        - containerPort: 6379
